Nef_2 Package: Release changes
----------------------------------------------------------------------

1.23 (?? ???? 2002)
     - replaced deprecated Construct_direction_of_line_2, 
       Construct_source_point_2, Construct_target_point_2, with non-deprepcated
       counterparts.

1.22 (22 July 2002)
     - fixed doc of Extended_cartesian
     - moved specialization of Polynomial operators to src to allow
       multiple inclusions without linker errors

1.21 (8 July 2002)
     - restore changes from 1.19

1.20 (8 July 2002)
     - ??? mistake that removed last change

1.19 (8 July 2002)
     - rename ASSERT macro to CGAL_NEF_ASSERT to avoid conflict with 
       other libraries' macros.

1.18 (28 June 2002)
    
     - Initialize boolean mark variable in constructors since default 
       value on MSVC is not always 'false'.

---------------------------- Release 2.4 -------------------------------

1.18 (13 May 2002)

     - Removed LEDA_MEMORY from Vertex, Halfedge, and Face. It won't 
       be used anyway, since the HDS container are allocator based.
     - Split HDS_items definition into separate classes for Vertex,
       Halfedge, Face and Items.

1.17 (08 May 2002)

     - Moved external member function definitions into class definitions
       to please VC7.

1.16 (7 May 2002)
     -  casting of Standard_RT(0) required before assignment for Borland

1.15 (2 May 2002)
     - enclose the temporary variable in a small scope to ensure it
       is destroyed earlier for SunPRO compiler

1.14 (29 Apr 2002)
     - added missing cstddef include

1.13 (26 Apr 2002)
     - removed SNIINST hack from calls in specialized operator -

1.12 (25 Apr 2002)
     - removed CGAL_*_INLINE macros that were in comments in Polynomial.h
     - make specialized operator - for int and double polynomials defined
       for MSVC only

1.11 (23 Apr 2002)
     - do not use simple interface for Borland
     - do use SNIHACK for Boralnd, which has touble distinguishing templated